fix bugs, finish business logic and http request handling. add simple statistics
