# internal/model/pr_reviewers.go
@@ -1,0 +1,6 @@
+package model
+
+type PrReviewersCount struct {
+	PullRequest PullRequestShort `json:"pull_request"`
+	Count       int              `json:"reviewers_count"`
+}
