# internal/model/user_reviews.go
@@ -1,0 +1,6 @@
+package model
+
+type UserReviewsCount struct {
+	User         User `json:"user_id"`
+	ReviewsCount int  `json:"reviews_count"`
+}
